# ArisUserManual

./: CMakeLists.txt  README.md
demo/: README.md
demo/demo1/: CMakeLists.txt  README.md
demo/demo1/include/: robot.h
demo/demo1/src/: main.cpp  plan.cpp  robot.cpp
demo/demo2/: CMakeLists.txt  README.md
demo/demo2/include/: robot.h
demo/demo2/src/: robot.cpp
demo/demo3/: CMakeLists.txt  README.md
demo/demo3/include/: plan.h
doxygen/: README.md
lib/aris/aris-1.5.0/include/: aris_lib_export.h
lib/aris/aris-1.5.0/sh/: create_project.bat
lib/aris/aris-1.5.0/sh/demo/: CMakeLists.txt
lib/aris/aris-1.5.0/sh/demo/src/: main.cpp
lib/aris/aris-1.5.0/share/aris/cmake/: aris-config.cmake  aris-targets-debug.cmake  aris-targets-release-release.cmake  aris-targets-release.cmake
